--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qrloop",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -13,6 +13,10 @@
     "flow": "flow src",
     "test": "jest src"
   },
+  "files": [
+    "lib",
+    "src"
+  ],
   "author": "Gaëtan Renaudeau <renaudeau.gaetan@gmail.com>",
   "license": "MIT",
   "dependencies": {
