--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules/
 
 # build
 /lib
+/lib-es
 
 # misc
 .DS_Store
@@ -21,5 +22,4 @@ yarn-error.log*
 # git mergetool
 *.orig
 
-flow-typed/
 flow-coverage
