--- a/examples/rn-text-importer/package.json
+++ b/examples/rn-text-importer/package.json
@@ -9,10 +9,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "buffer": "^5.2.1",
+    "buffer": "^5.4.3",
     "expo": "^30.0.1",
-    "qrloop": "0.8.0-beta.2",
-    "react": "16.3.1",
+    "qrloop": "1.0.0",
+    "react": "16.12.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-progress": "^3.5.0"
   }
