--- a/examples/web-text-exporter/package.json
+++ b/examples/web-text-exporter/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "lorem-ipsum": "^1.0.6",
-    "qrcode": "^1.3.0",
-    "qrloop": "0.8.0-beta.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "lorem-ipsum": "^2.0.3",
+    "qrcode": "^1.4.4",
+    "qrloop": "1.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
