--- a/examples/rn-text-importer/package.json
+++ b/examples/rn-text-importer/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "empty-project-template",
   "main": "node_modules/expo/AppEntry.js",
-  "private": true,
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "buffer": "^5.4.3",
-    "expo": "^30.0.1",
-    "qrloop": "1.0.1",
-    "react": "16.12.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
-    "react-native-progress": "^3.5.0"
-  }
+    "buffer": "^6.0.3",
+    "expo": "~40.0.0",
+    "expo-camera": "~9.1.0",
+    "expo-permissions": "~10.0.0",
+    "expo-status-bar": "~1.0.3",
+    "qrloop": "^1.1.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-web": "~0.14.10"
+  },
+  "devDependencies": {
+    "@babel/core": "~7.12.10"
+  },
+  "private": true
 }
