--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qrloop",
-  "version": "1.3.0",
+  "version": "1.4.0-beta.0",
   "description": "Envelop big blob of data into frames that can be displayed in series of QR Codes",
   "keywords": [
     "buffer",
